<resources>
    <string name="app_name">HIPPO V1</string>
    <string name="termCheck">Aceitar termos de uso</string>
    <string name="termDescription">
        O Aplicativo gravará recursos em seu aparelho. Ao aceitar o termo de uso, você automaticamnete autoriza a utilização nesse método para atender as funcionalidades necessárias para essa aplicação.
    </string>
    <string name="tv_nome_do_produto">Nome do Produto</string>

    <!-- As linha abaixo pertencem a tela activity_produto -->
    <string-array name="tab_titulo">
        <item>Categoria A</item>
        <item>Categoria B</item>
        <item>Categoria C</item>
        <item>Categoria D</item>
    </string-array>

    <string name="textoA">Texto A</string>
    <string name="textoB">Texto B</string>
    <string name="textoC">Texto C</string>

    <!-- As linha abaixo pertencem a tela activity_cadastro -->
    <string name="tvemail">E-mail :</string>
    <string name="tvnome">Nome Completo :</string>
    <string name="tvsenha">Senha :</string>
    <string name="tvcsenha">Confirme a Senha :</string>
    <string name="tvcelular">Celular :</string>
    <string name="tvdata_nacimento">Data de Nascimento :</string>

    <string name="hint_email">Digite o E-mail !</string>
    <string name="hint_nome">Digite o Nome !</string>
    <string name="hint_senha">Digite a Senha !</string>
    <string name="hint_csenha">Confirme a Senha !</string>
    <string name="hint_celular">Digite o Celular !</string>
    <string name="hint_data_nacimento">00/00/0000</string>


    <string name="chx_promocoes">Deseja Receber Nossa Promoções ?</string>
    <string name="btn_cadastrar">Cadastrar-se?</string>

    <!-- As linha abaixo pertencem a tela activity_login -->
    <string name="loginUsuario">Email:</string>
    <string name="senhaUsuario">Senha:</string>
    <string name="buttonEnviar">Enviar:</string>
    <string name="buttonNvCadastro">Novo Cadastro:</string>
    <string name="txt_forma_de_pagamento">Forma de pagamento:</string>
    <string name="n_mero_do_cart_o">Número do cartão:</string>
    <string name="numcart">0000 0000 0000 0000</string>
    <string name="validade">Validade:</string>
    <string name="barra">/</string>
    <string name="ano">AAAA</string>
    <string name="mes">MM</string>
    <string name="c_digo_de_seguran_a">Código de segurança:</string>
    <string name="nome_impresso_no_cart_o">Nome impresso no cartão:</string>
    <string name="ex_nome">EX: joão da silva barros</string>


    <string name="pass">******</string>
    <string name="btn_enviar">Enviar</string>
    <string name="novo_cadastro">Novo Cadastro</string>
    <string name="email">mail@dominio.com.br</string>
    <string name="salvar_dados">Salvar Dados</string>

    <!-- As linha abaixo pertencem a tela Activity-Categorias -->
    <string name="choose_any_category">Selecione uma categoria para comprar produtos</string>
    <!--    SOBRE / ABOUT  -->
    <string name="title_activity_about">Grupo Enforce</string>
    <string name="lbl_info_carrinho">Produtos atualmente no carrinho:</string>
    <string name="lbl_btn_concluir">Concluir Compra</string>
    <string name="lbl_btn_comprarmais">Continuar Comprando</string>
    <string name="lbl_noproducts">Não há nenhum produto nessa categoria. Retorne à tela Anterior e escolha outra categoria.</string>

</resources>