<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_cartao_op"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.enforce.hippov1.fragmentos.Cartao_op">


    <TextView
        android:text="@string/n_mero_do_cart_o"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"

        android:id="@+id/tv_numcart" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_below="@+id/tv_numcart"
        android:layout_alignParentStart="true"
        android:layout_marginTop="13dp"
        android:id="@+id/et_numcart"
        android:layout_alignParentEnd="true"
        android:hint="@string/numcart" />

    <TextView
        android:text="@string/validade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_numcart"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:id="@+id/tv_val" />

    <TextView
        android:text="@string/barra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/et_valm"
        android:layout_toEndOf="@+id/et_valm"
        android:layout_marginBottom="11dp"
        android:id="@+id/tv_barra" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/et_vala"
        android:hint="@string/ano"
        android:layout_alignBaseline="@+id/tv_barra"
        android:layout_alignBottom="@+id/tv_barra"
        android:layout_toEndOf="@+id/tv_barra"
        android:layout_marginStart="19dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_marginTop="17dp"
        android:id="@+id/et_valm"
        android:hint="@string/mes"
        android:layout_below="@+id/tv_val"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/tv_val" />

    <TextView
        android:text="@string/c_digo_de_seguran_a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_vala"
        android:layout_marginTop="14dp"
        android:id="@+id/tv_cods" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_below="@+id/tv_cods"
        android:layout_alignParentStart="true"
        android:layout_marginTop="14dp"
        android:id="@+id/et_codseg"
        android:hint="000" />

    <TextView
        android:text="@string/nome_impresso_no_cart_o"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_nomecart"
        android:layout_below="@+id/et_codseg"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_below="@+id/tv_nomecart"
        android:layout_alignEnd="@+id/et_codseg"
        android:layout_marginTop="22dp"
        android:id="@+id/et_nomecart"
        android:hint="@string/ex_nome" />
</RelativeLayout>
