<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.enforce.hippov1.Login">


    <EditText
        android:id="@+id/loginUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:layout_marginTop="120dp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/buttonEnviar"
        android:layout_alignEnd="@+id/senhaUsuario" />

    <EditText
        android:id="@+id/senhaUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/pass"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/buttonEnviar"
        android:layout_marginTop="180dp"
        android:layout_alignEnd="@+id/buttonNvCadastro" />

    <Button
        android:id="@+id/buttonEnviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_enviar"
        android:layout_alignTop="@+id/buttonNvCadastro"
        android:layout_toStartOf="@+id/buttonNvCadastro"
        android:layout_marginEnd="48dp" />

    <Button
        android:id="@+id/buttonNvCadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/novo_cadastro"
        tools:layout_editor_absoluteX="199dp"
        tools:layout_editor_absoluteY="360dp"
        android:layout_marginTop="114dp"
        android:layout_marginEnd="45dp"
        android:layout_below="@+id/senhaUsuario"
        android:layout_alignParentEnd="true" />

</RelativeLayout>